<resources>
    <string name="app_name">Трекер Финансов</string>
    <string name="filter_view_finance_tracker">FinanceTracking</string>

    <string name="text_ok">OK</string>
    <string name="text_error">Error</string>
    <string name="text_no">No</string>
    <string name="text_yes">Yes</string>
    <string name="text_cancel">Cancel</string>

    <string name="balance">Balance</string>
    <string name="about_app">About app</string>
    <string name="settings">Settings</string>

    <string name="rub">\u20BD</string>
    <string name="usd">$</string>

    <string name="balance_message">%1$s %2$s</string>
    <string name="add_transaction">Add transaction</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="value">Amount</string>
    <string name="statistics">Statistics</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="my_wallets">My wallets</string>
    <string name="add_wallet">Add wallet</string>
    <string name="default_wallet">make default</string>
    <string name="current_balance">Current balance: &#160;</string>
    <string name="wallet_name_dots">Current wallet: &#160;</string>
    <string name="existing_wallet">Wallet with this name already exists</string>
    <string name="error_no_wallet">Select a wallet first</string>

    <string name="text_settings_language">Select language:</string>
    <string name="text_settings_language_english">English</string>
    <string name="text_settings_language_russian">Russian</string>

    <string name="text_info_about_app_general">Yandex mobile developer summer school 2018 homework application</string>
    <string name="text_info_about_app_contacts">Made by: Pavel Vasiliev\n\nContact me:</string>
    <string name="text_info_about_app_email_subject">Yandex mobile dev school application</string>
    <string name="text_info_about_app_email_no_client">EMail client not found</string>

    <string name="text_operation_type_out">Expense</string>
    <string name="text_operation_type_in">Income</string>

    <string name="text_delete_transaction">Delete</string>
    <string name="text_delete_confirm">Are you sure you want to delete this transaction?</string>

    <string-array name="currencies">
        <item>RUB</item>
        <item>USD</item>
    </string-array>

    <string-array name="categories_in">
        <item>Food</item>
        <item>Clothes</item>
        <item>Entertainment</item>
        <item>Other</item>
    </string-array>

    <string-array name="categories_out">
        <item>Salary</item>
        <item>Theft</item>
        <item>Bribe</item>
        <item>Other</item>
    </string-array>

</resources>
