<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor">

    <include
        android:id="@+id/activity_settings_toolbar"
        layout="@layout/toolbar" />

    <View
        android:id="@+id/settings_separator_1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/color_separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_settings_toolbar"
        />

    <TextView
        android:id="@+id/settings_description_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/text_settings_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_separator_1"
        />

    <android.support.v7.widget.ButtonBarLayout
        android:id="@+id/settings_buttons_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_description_language">

        <Button
            android:id="@+id/settings_button_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/text_settings_language_english"
            />

        <Button
            android:id="@+id/settings_button_russian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/text_settings_language_russian"
            />

    </android.support.v7.widget.ButtonBarLayout>

</android.support.constraint.ConstraintLayout>