<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fragment_add_wallet_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="@android:color/white"
        app:title="@string/add_wallet"/>

    <TextView
        android:id="@+id/fragment_add_wallet_default_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fragment_add_wallet_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fragment_add_wallet_default"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_add_wallet_default"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/default_wallet"
        android:textSize="18sp"
        android:textColor="?android:textColorHint"/>

    <CheckBox
        android:id="@+id/fragment_add_wallet_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_add_wallet_toolbar"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_add_wallet_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_add_wallet_default">

        <EditText
            android:id="@+id/fragment_add_wallet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_add_wallet_value_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fragment_add_wallet_currency"
        app:layout_constraintTop_toBottomOf="@+id/fragment_add_wallet_name_label">

        <EditText
            android:id="@+id/fragment_add_wallet_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/balance"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>


    <Spinner
        android:id="@+id/fragment_add_wallet_currency"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_add_wallet_name_label" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fragment_add_wallet_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorAccent"
        android:src="@drawable/ic_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>